# bilingual-diff

./: README.md  pyproject.toml  run.py
bilingual_merge/: cli.py  config.py  diffing.py  fuzzy.py  io_utils.py  main.py  normalize.py  output.py  semantic.py
bilingual_merge/embeddings/: __init__.py  base.py  gemini.py
data_example/: merged.csv  merged.fuzzy_similar.csv  merged.jsonl  merged.semantic_similar.csv  source.csv  target.csv
embeddings/: minilm.py
